--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content=""width=device-width, initial-scale="1.0">
-    <title>A Site</title>
+    <title>Richard Yin</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.png">
   </head>
   <body>
     <h1>Hewwo?????</h1>
