--- a/index.html
+++ b/index.html
@@ -2,10 +2,47 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content=""width=device-width, initial-scale="1.0">
-    <title>Richard Yin</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Kreon:wght@300&family=Lusitana:wght@400;700&family=Poltawski+Nowy:wght@600&family=Vollkorn:wght@600&family=Baskervville:ital@0;1&display=swap" rel="stylesheet">   <!-- <link href="https://fonts.googleapis.com/css2?family=Jost&family=Alata&display=swap" rel="stylesheet"> -->
+    
     <link rel="icon" type="image/x-icon" href="assets/favicon.png">
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
+
+    <title>Richard Yin</title>
   </head>
-  <body>
-    <h1>Hewwo?????</h1>
+  
+  <body onmousemove="handleMouseMove(event)">
+    <div id="background">
+      <div id="c1" class="background_img"></div>
+      <div id="c2" class="background_img"></div>
+      <div id="c3" class="background_img"></div>
+      <div id="c4" class="background_img"></div>
+      <div id="c5" class="background_img"></div>
+      <div id="c6" class="background_img"></div>
+      <div id="c7" class="background_img"></div>
+      <div id="c8" class="background_img"></div>
+      <div id="c9" class="background_img"></div>
+      <div id="c10" class="background_img"></div>
+      <div id="c11" class="background_img"></div>
+      <div id="c12" class="background_img"></div>
+      <div id="c13" class="background_img"></div>
+    </div>
+    <div id="main_block">
+      <div id="h1_wrapper">
+        <h1>Richard Yin</h1>
+      </div>
+      <span>Rice Cake Enthusiast, LaTeX Hater</span>
+    </div>
+    <div id="menu_block">
+      <h1>About</h1>
+      <h1>Projects</h1>
+      <h1>Music</h1>
+      <h1>Resources</h1>
+      <h1>Resume</h1>
+      <canvas id="select_animation"></canvas>
+    </div>
   </body>
 </html>
