--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h1>Music</h1>
       <h1>Resources</h1>
       <h1>Resume</h1>
-      <canvas id="select_animation"></canvas>
+      <canvas id="select_animation" width="300%" height="250%"></canvas>
     </div>
   </body>
 </html>
