--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
       <span>Rice Cake Enthusiast, LaTeX Hater</span>
     </div>
     <div id="menu_block">
-      <h1>About</h1>
-      <h1>Projects</h1>
-      <h1>Music</h1>
-      <h1>Resources</h1>
-      <h1>Resume</h1>
-      <canvas id="select_animation" width="300%" height="250%"></canvas>
+      <h1 onmouseenter="enterSelect(0)" onmouseleave="leaveSelect()">About</h1>
+      <h1 onmouseenter="enterSelect(1)" onmouseleave="leaveSelect()">Projects</h1>
+      <h1 onmouseenter="enterSelect(2)" onmouseleave="leaveSelect()">Music</h1>
+      <h1 onmouseenter="enterSelect(3)" onmouseleave="leaveSelect()">Resources</h1>
+      <h1 onmouseenter="enterSelect(4)" onmouseleave="leaveSelect()">Resume</h1>
+      <canvas id="select_animation" width="350%" height="250%"></canvas>
     </div>
   </body>
 </html>
