--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Kreon:wght@300&family=Lusitana:wght@400;700&family=Poltawski+Nowy:wght@600&family=Vollkorn:wght@600&family=Baskervville:ital@0;1&display=swap" rel="stylesheet">   <!-- <link href="https://fonts.googleapis.com/css2?family=Jost&family=Alata&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Kreon:wght@300&family=Lusitana:wght@400;700&family=Goudy+Bookletter+1911&family=Habibi&family=IM+Fell+Double+Pica&family=Alegreya+SC:wght@500&family=Cardo&family=Poltawski+Nowy:wght@600&family=Baskervville:ital@0;1&display=swap" rel="stylesheet">   <!-- <link href="https://fonts.googleapis.com/css2?family=Jost&family=Alata&display=swap" rel="stylesheet"> -->
     
     <link rel="icon" type="image/x-icon" href="assets/favicon.png">
     <link rel="stylesheet" href="index.css">
@@ -19,10 +19,11 @@
     <div id="container">
       <div id='room_zoom'>
         <div id="room">
-          <h1>About</h1>
-          <p>I like video games, music, and machine learning.</p>
-          <p>And I study computer science and data science at the University of Toronto.</p>
-
+          <span>
+            <h1>About</h1>
+            <p>I like video games, music, and machine learning.</p>
+            <p>And I study computer science and data science at the University of Toronto.</p>
+          </span>
         </div>
       </div>
       <div class="tv" id="tv"></div>
