update icons and about

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Kreon:wght@300&family=Lusitana:wght@400;700&family=Goudy+Bookletter+1911&family=Habibi&family=IM+Fell+Double+Pica&family=Alegreya+SC:wght@500&family=Cardo&family=Poltawski+Nowy:wght@600&family=Baskervville:ital@0;1&display=swap" rel="stylesheet">   <!-- <link href="https://fonts.googleapis.com/css2?family=Jost&family=Alata&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Kreon:wght@300&family=Zilla+Slab:wght@500&family=Lusitana:wght@400;700&family=Goudy+Bookletter+1911&family=IM+Fell+DW+Pica+SC&family=Alegreya+SC:wght@500&family=Cardo&family=Poltawski+Nowy:wght@600&family=Baskervville:ital@0;1&display=swap" rel="stylesheet">   <!-- <link href="https://fonts.googleapis.com/css2?family=Jost&family=Alata&display=swap" rel="stylesheet"> -->
     
     <link rel="icon" type="image/x-icon" href="assets/favicon.png">
     <link rel="stylesheet" href="index.css">
@@ -18,12 +18,26 @@
   <body onmousemove="handleMouseMove(event)">
     <div id="container">
       <div id='room_zoom'>
-        <div id="room">
-          <span>
-            <h1>About</h1>
-            <p>I like video games, music, and machine learning.</p>
-            <p>And I study computer science and data science at the University of Toronto.</p>
-          </span>
+        <div id="room"></div>
+      </div>
+      <div id="about">
+        <h1>About</h1>
+        <hr>
+        <p>I like video games, classical music, and machine learning.</p>
+        <p>And I study computer science and data science at the University of Toronto.</p>
+        <div id="about_inner">
+          WHAT TO PUT HERE??????
+          <div id="link_block">
+            <a href="https://musescore.com/trngl" target="_blank">
+              <div class="link_icon" id="musescore"></div>
+            </a>
+            <a href="https://github.com/tirangol/UofT" target="_blank">
+              <div class="link_icon" id="github"></div>
+            </a>
+            <a href="https://www.youtube.com/channel/UCRLORSKCanHbQW9_6iw__Gw" target="_blank">
+              <div class="link_icon" id="youtube"></div>
+            </a>
+          </div>
         </div>
       </div>
       <div class="tv" id="tv"></div>
