--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Kreon:wght@300&family=Zilla+Slab:wght@500&family=Lusitana:wght@400;700&family=Goudy+Bookletter+1911&family=IM+Fell+DW+Pica+SC&family=Alegreya+SC:wght@500&family=Cardo&family=Poltawski+Nowy:wght@600&family=Baskervville:ital@0;1&display=swap" rel="stylesheet">   <!-- <link href="https://fonts.googleapis.com/css2?family=Jost&family=Alata&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Kreon:wght@300&family=Zilla+Slab:wght@500&family=Lusitana:wght@400;700&family=Goudy+Bookletter+1911&family=IM+Fell+DW+Pica&family=Alegreya+SC:wght@500&family=Cardo&family=Poltawski+Nowy:wght@600&family=Baskervville:ital@0;1&display=swap" rel="stylesheet">   <!-- <link href="https://fonts.googleapis.com/css2?family=Jost&family=Alata&display=swap" rel="stylesheet"> -->
     
     <link rel="icon" type="image/x-icon" href="assets/favicon.png">
     <link rel="stylesheet" href="index.css">
@@ -48,10 +48,19 @@
       <div id="stand"></div>
 
       <div id="music_block">
-        <h1>Music</h1>
-        <p>I'm a classically-trained pianist and flautist, as well as a music arranger and self-taught classical composer.</p>
-        <p>I post my works on Musescore, using the accounts trngl for classical music and slappysloop for video game and anime arrangements. I seldom post on my Youtube.</p>
+        <div id="m1" class="music_tab">
+          <h1>Music</h1>
+          <p>I'm a classically-trained pianist and flautist, as well as a self-taught arranger and classical composer.</p>
+          <ul>
+            <li><a id="trngl" target="_blank" href="https://musescore.com/trngl">trngl</a> - compositions and arrangements, classical music</li>
+            <li><a id="slappysloop" target="_blank" href="https://musescore.com/slappysloop">slappysloop</a> - video game, anime, miscellaneous arrangements</li>
+            <li><a id="richard_y" target="_blank" href="https://www.youtube.com/@tirangol">Richard Y</a> - sheet music videos</li>
+          </ul>
+        </div>
+
+
       </div>
+
       <div id="blue"></div>
       <div id="c14" class="background_img"></div>
       <div id="background">
@@ -86,7 +95,6 @@
         </div>
 
       </div>
-
     </div>
   </body>
 </html>
