--- a/index_lite.html
+++ b/index_lite.html
@@ -47,41 +47,91 @@
 	
 	  <div id='music' class='section'>
 	    <h1>Music</h1>
+
 		<div id='album_classical_compositions_solo' class='album'>
-		  <img src='assets/ideas/5.jpg'>
+		  <img src='assets/icons/classical_compositions_solo.png'>
 		  <h2>Classical Compositions, Solo</h2>
 		  <table>
-			  <tr>
-				<th>Title</th>
-				<th>Year</th>
-				<th>Duration</th>
-			  </tr>
-			  <tr>
-				<td>Sonata no. 1 in E♭ Minor (Mov. 1)</td>
-				<td>2019</td>
-				<td>1</td>
-			  </tr>
-			  <tr>
-				<td>Prelude no. 1 in G# Minor</td>
-				<td>2019</td>
-				<td>1</td>
-			  </tr>
-			  <tr>
-				<td>Prelude no. 2 in F# Minor</td>
-				<td>2017</td>
-				<td>1</td>
-			  </tr>
-			  <tr>
-				<td>Pentanote Etude no. 1</td>
-				<td>2019</td>
-				<td>1</td>
-			  </tr>
-			  <tr>
-				<td>Miniature for Flute and Piano</td>
-				<td>2021</td>
-				<td>1</td>
-			  </tr>
-			</table>
+			<tr>
+			  <th>Title</th>
+			  <th>Year</th>
+			  <th>Duration</th>
+			</tr>
+			<tr>
+			  <td>Sonata no. 1 in E♭ Minor (Mov. 1)</td>
+			  <td>2019</td>
+			  <td>1</td>
+			</tr>
+			<tr>
+			  <td>Prelude no. 1 in G# Minor</td>
+			  <td>2019</td>
+			  <td>1</td>
+			</tr>
+			<tr>
+			  <td>Prelude no. 2 in F# Minor</td>
+			  <td>2017</td>
+			  <td>1</td>
+			</tr>
+			<tr>
+			  <td>Pentanote Etude no. 1</td>
+			  <td>2019</td>
+			  <td>1</td>
+			</tr>
+			<tr>
+			  <td>Miniature for Flute and Piano</td>
+			  <td>2021</td>
+			  <td>1</td>
+			</tr>
+		  </table>
+		</div>
+
+		<div id='album_classical_arrangements' class='album'>
+		  <img src='assets/icons/classical_arrangements.png'>
+		  <h2>Classical Arrangements</h2>
+		  <table>
+			<tr>
+			  <th>Title</th>
+			  <th>Instruments</th>
+			  <th>Musician</th>
+			  <th>Year</th>
+			  <th>Duration</th>
+			</tr>
+			<tr>
+			  <td>Three Movements from "The Firebird"</td>
+			  <td>Concert Band</td>
+			  <td>Stravinsky, Igor</td>
+			  <td>2023</td>
+			  <td>1</td>
+			</tr>
+			<tr>
+			  <td>Toccata from "Le tombeau de Couperin"</td>
+			  <td>Wind Quintet</td>
+			  <td>Ravel, Maurice</td>
+			  <td>2022</td>
+			  <td>1</td>
+			</tr>
+			<tr>
+			  <td>À la manière de Borodine</td>
+			  <td>Orchestra</td>
+			  <td>Ravel, Maurice</td>
+			  <td>2021</td>
+			  <td>1</td>
+			</tr>
+			<tr>
+			  <td>Introduction et allegro</td>
+			  <td>Piano</td>
+			  <td>Ravel, Maurice</td>
+			  <td>2022</td>
+			  <td>1</td>
+			</tr>
+			<tr>
+			  <td>Sonata no. 17 in D Minor "The Tempest", mov. 3</td>
+			  <td>Orchestra</td>
+			  <td>Beethoven, Ludwig van</td>
+			  <td>2018</td>
+			  <td>1</td>
+			</tr>
+		  </table>
 		</div>
 	  </div>
 	
