--- a/index_lite.html
+++ b/index_lite.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="index_lite.css">
     <script src="index_lite.js"></script>
 
-    <title>Richard Yin</title>
+    <title>Richard F. Yin</title>
   </head>
   
   <body>
