--- a/static.html
+++ b/static.html
@@ -15,8 +15,10 @@
 <body onload='resizeCanvas()'>
 	<div id='bg'></div>
 	<canvas id='static' width='800' height='800'></canvas>
-	<div class='button' id='static1' onclick='static1()'>Static 1</div>
-	<div class='button' id='static2' onclick='static2()'>Static 2</div>
+	<div class='button' id='static1' onclick='turnTVOn()'>TV On</div>
+	<div class='button' id='static2' onclick='turnStaticOff()'>Static Off</div>
+	<div class='button' id='static3' onclick='turnStaticOn()'>Static On</div>
+	<div class='button' id='static4' onclick='turnTVOff()'>TV Off</div>
 </body>
 
 
